# ProductSpyderScrapingExtension

./: .env  .gitignore  README.md  app.py  manifest.json  package.json  pyproject.toml  test.http  test.py  webpack.config.js
server/: app.py  comprehensive_extractors.py  custom_extractors.py  extractors.py  substring_processor.py  test.py
server/src/: index.ts
src/: background.ts  content.ts  popup.html
